2006-12-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* doc/cursors.n: Mention "none" in supported
	cursor list. Fix comment that incorrectly
	claims that the Win32 "no" cursor hides
	the cursor.
	* tests/cursor.test: Test "none" cursor.
	* unix/tkUnixCursor.c (CreateCursorFromTableOrFile,
	TkGetCursorByName): Define a table of Tk cursors
	that is searched in addition to the X cursor
	table. A Tk cursor is loaded from a data string
	and works with the same options as the built
	in X cursors. This code makes it possible to
	use "none" as a cursor name under Unix.
	* win/rc/cursor9a.cur: Added none Win32 cursor.
	* win/rc/tk_base.rc: Define a built-in Win32
	cursor named "none".
	[Patch 1615427]

2006-12-14  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkButton.c, generic/ttk/ttkElements.c,
	generic/ttk/ttkEntry.c, generic/ttk/ttkFrame.c,
	generic/ttk/ttkImage.c, generic/ttk/ttkInit.c,
	generic/ttk/ttkLabel.c, generic/ttk/ttkNotebook.c,
	generic/ttk/ttkPanedwindow.c, generic/ttk/ttkProgress.c,
	generic/ttk/ttkScale.c, generic/ttk/ttkScrollbar.c,
	generic/ttk/ttkSeparator.c, generic/ttk/ttkTheme.h,
	generic/ttk/ttkTreeview.c, generic/ttk/ttkWidget.h:
	Global reduction: use per-file *_Init() routines to reduce 
	the number of globally-visible initialization records.

2006-12-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (install-doc): intentionally skip ttk_dialog.n
	installation (not for public consumption)

	* doc/scrollbar.n, doc/button.n, doc/checkbutton.n:
	* doc/entry.n, doc/frame.n, doc/label.n, doc/labelframe.n:
	* doc/menu.n, doc/menubutton.n, doc/panedwindow.n:
	* doc/radiobutton.n, doc/scrollbar.n, doc/ttk_*: revamp ttk docs
	to use consist nroff format (not 100% consistent with classic
	widget docs).  Add more man page cross-linking "SEE ALSO".

	* generic/ttk/ttkInit.c:
	* generic/ttk/ttkTreeview.c: make treeview exist by default
	* generic/ttk/ttkPanedwindow.c: s/TtkPaned_Init/TtkPanedwindow_Init/
