@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: ttk_combobox.n,v 1.3 2006/12/13 23:04:32 hobbs Exp $
+'\" RCS: @(#) $Id: ttk_combobox.n,v 1.4 2006/12/17 21:09:46 jenglish Exp $
 '\"
 .so man.macros
 .TH ttk_combobox n 8.5 Tk "Tk Themed Widget"
@@ -32,6 +32,8 @@ If set, the widget selection is linked to the X selection.
 .OP \-justify justify Justify
 Specifies how the text is aligned within the widget.
 One of \fBleft\fR, \fBcenter\fR, or \fBright\fR.
+.OP \-height height Height
+Specifies the height of the pop-down listbox, in rows.
 .OP \-postcommand postCommand PostCommand
 A Tcl script to evaluate immediately before displaying the listbox.
 The \fB-postcommand\fR script may specify the \fB-values\fR to display.
