@@ -1,5 +1,5 @@
 #
-# $Id: combobox.tcl,v 1.2 2006/11/27 06:53:55 jenglish Exp $
+# $Id: combobox.tcl,v 1.3 2006/12/17 21:09:46 jenglish Exp $
 #
 # Ttk widget set: combobox bindings.
 #
@@ -275,8 +275,11 @@ proc ttk::combobox::Post {cb} {
     $popdown.l see $current
     # Should allow user to control listbox height
     set height [llength $values]
-    if {$height > 10} {
-	set height 10
+    if {$height > [$cb cget -height]} {
+	set height [$cb cget -height]
+    	grid $popdown.sb
+    } else {
+	grid remove $popdown.sb
     }
     $popdown.l configure -height $height
     update idletasks
