@@ -1,3 +1,9 @@
+2006-12-17  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/combobox.tcl, generic/ttk/ttkEntry.c,
+	doc/ttk_combobox.n: Add combobox -height option; only 
+	show scrollbar if the listbox needs to scroll [#1032869].
+
 2006-12-16  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* doc/cursors.n: Mention "none" in supported
